terminados los makefiles

--- a/desarrollo/Makefile
+++ b/desarrollo/Makefile
@@ -1,16 +1,19 @@
+# Variables
 GXX = mpic++
-NAME1 = version1
-NAME2 = version2
-NAME3 = version3
 P = 4
-version1:
-	$(GXX) -o $(NAME1).out $(NAME1).cpp && mpirun -np $(P) $(NAME1).out
+TARGETS = version1 version2 version3
 
-version2:
-	$(GXX) -o $(NAME2).out $(NAME2).cpp && mpirun -np $(P) $(NAME2).out
-	
-version3:
-	$(GXX) -o $(NAME3).out $(NAME3).cpp && mpirun -np $(P) $(NAME3).out
+# Regla principal: compila todo
+all: $(TARGETS)
 
+# Regla genérica para compilar cada objetivo
+%: %.cpp
+	$(GXX) -o run-$@.out $<
+
+# Reglas para ejecutar cada versión
+run-%: %
+	mpirun -np $(P) $@.out
+
+# Limpieza de archivos generados
 clean:
 	rm -f *.out
