automatizado el software de tiempos

--- a/omp/Makefile
+++ b/omp/Makefile
@@ -1,23 +1,32 @@
 # Variables
 GXX = g++
 CFLAGS = -Iheaders -fopenmp
-TARGETS = trivial_reduction_omp binary_reduction_omp
+TARGETS = trivial_reduction_omp
 
-# Regla principal (compila todo)
-all: $(TARGETS)
+# Objetivos "phony"
+.PHONY: all clean trivial_BANANA_ trivial_B_WORD_ trivial_PARALLEL_
 
-# Regla para compilar cualquier ejecutable
-%: %.cpp
-	$(GXX) $(CFLAGS) -o $@ $<
+# Reglas principales
+all: trivial_BANANA_ binary_BANANA_ trivial_B_WORD_ binary_B_WORD_ trivial_PARALLEL_ binary_PARALLEL_
 
-# Regla para ejecutar trivial_reduction_omp
-run-trivial: trivial_reduction_omp
-	./trivial_reduction_omp
+# Reglas para compilar y ejecutar con BANANA directiva
+trivial_BANANA_: trivial_reduction_omp.cpp
+	$(GXX) $(CFLAGS) -DBANANA_WORD -o trivial_reduction_omp_banana trivial_reduction_omp.cpp
+	@echo "Ejecutando trivial_reduction_omp_banana..."
+	./trivial_reduction_omp_banana
 
-# Regla para ejecutar binary_reduction_omp
-run-binary: binary_reduction_omp
-	./binary_reduction_omp
+# Reglas para compilar y ejecutar con B_WORD directiva
+trivial_B_WORD_: trivial_reduction_omp.cpp
+	$(GXX) $(CFLAGS) -DB_WORD -o trivial_reduction_omp_bword trivial_reduction_omp.cpp
+	@echo "Ejecutando trivial_reduction_omp_bword..."
+	./trivial_reduction_omp_bword
+
+# Reglas para compilar y ejecutar con PARALLEL_WORD directiva
+trivial_PARALLEL_: trivial_reduction_omp.cpp
+	$(GXX) $(CFLAGS) -DPARALLEL_WORD -o trivial_reduction_omp_parallel trivial_reduction_omp.cpp
+	@echo "Ejecutando trivial_reduction_omp_parallel..."
+	./trivial_reduction_omp_parallel
 
 # Limpieza de archivos generados
 clean:
-	rm -f $(TARGETS)
+	rm -f trivial_reduction_omp_* 
