--- a/omp/Makefile
+++ b/omp/Makefile
@@ -10,7 +10,7 @@ TARGETS = trivial_reduction_omp
 all: trivial_BANANA_ binary_BANANA_ trivial_B_WORD_ binary_B_WORD_ trivial_PARALLEL_ binary_PARALLEL_
 
 # Reglas para compilar y ejecutar con BANANA directiva
-trivial_BANANA_: trivial_reduction_omp.cpp
+trivial_BANANA_WORD_: trivial_reduction_omp.cpp
 	$(GXX) $(CFLAGS) -DBANANA_WORD -o trivial_reduction_omp_banana trivial_reduction_omp.cpp
 	@echo "Ejecutando trivial_reduction_omp_banana..."
 	./trivial_reduction_omp_banana
@@ -22,7 +22,7 @@ trivial_B_WORD_: trivial_reduction_omp.cpp
 	./trivial_reduction_omp_bword
 
 # Reglas para compilar y ejecutar con PARALLEL_WORD directiva
-trivial_PARALLEL_: trivial_reduction_omp.cpp
+trivial_PARALLEL_WORD_: trivial_reduction_omp.cpp
 	$(GXX) $(CFLAGS) -DPARALLEL_WORD -o trivial_reduction_omp_parallel trivial_reduction_omp.cpp
 	@echo "Ejecutando trivial_reduction_omp_parallel..."
 	./trivial_reduction_omp_parallel
