--- a/sequential/Makefile
+++ b/sequential/Makefile
@@ -1,5 +1,12 @@
 # Variables
-GXX = g++-13
+# Detectar sistema operativo
+UNAME := $(shell uname)
+
+ifeq ($(UNAME), Darwin)
+    GXX = g++-14
+else
+    GXX = g++
+endif
 CFLAGS = -Iheaders -fopenmp
 TARGET = main
 SRC = main.cpp
